root/static/styles/extra/scripts.css
/* ... */
.markItUpHeader ul ul ul li {
 float:none;
}

.markItUpHeader ul a {
 display:block;
 margin:0;
 padding: 1px 4px;
 text-indent:-10000px;
 width:16px;
}

.markItUpHeader ul ul a {
 display:block;
 text-indent:0;
 width:120px;
}

.markItUpHeader ul ul a:hover {
 color: orange;
}

/* Hide the bottom border line for edited, but not displayed, artists */

.notActive td.ta-results {
 border-bottom: 0 none!important;
}

.notActive td.ta-results textarea {
 cursor: pointer!important;
 height: 1em;
 letter-spacing: 0!important;
 margin-bottom: 0!important;
 padding-top: 0!important;
 padding-bottom: 0!important;
}

/* Control buttons placed on the right side of the screen. */

.rightsidebutton {
 position:absolute;
 width: 6em; /* Without this, IE stretches the button to the full screen's width. */
 float:right;
 right:3px;
}

/* Side accordion */

#accordion {
 float: left;
 width: 100%;
 margin-top: 1em;
}

.ui-accordion .ui-accordion-content-active {
 border-top:1px solid gray!important;
 margin-bottom:3px!important;
}

/* Editing Tools menu */

#accordion div {
 background: #FFF;
 display: block;
 padding: 6px;
 text-align: center;
}


#accordion div select,
#accordion div input {
 margin: 2px 0;
 padding: 1px 0;
 width: 85%;
}

#editMsgBox {
 margin-left:auto;
 margin-right:auto;
 width:99%;
 padding:1px;
}

#editMsg {
 background:#F0EFFC;
 color:#524D80;
 font-weight:bolder;
 margin-left:auto;
 margin-right:auto;
 text-align:center;
 padding:5px;
}

/* Tooltips used for heads up warnings. */
.bt-content {
  color: #000;
  line-height: normal;
  padding: 5px;
}

/* Help and heads-up display box. */
#wikiHelpInnerBox {
 padding: 2px;
 background: #fff;
}

#wikiHelp {
 height: 25em;
 padding: 6px 0 6px 6px;
 overflow-y: scroll;
 overflow-x: hidden;
 margin-bottom: 0.3em;
}

#wikiHelpBox {
 background: #736DAB; 
 padding: 1px;
 margin: 1em 2px 2px;
 display: none;
}

#wikiTitle {
 font-weight: bolder;
 margin: 6px;
}

#wikiHelpBox hr {
 border-color: #736DAB;
}

/* Help icons */

.helpIcon {
 display: none;
 cursor: pointer;
 height: 12px;
 margin-right: 0.2em;
 vertical-align: middle;
 width: 12px;
}

/* Documentation window close button. */

.closeButton {
 cursor: pointer;
 float: right;
 height: 16px;
 width: 16px;
}

/* Track fields. */

table.tbl th.first {
 padding-right: 16px;
 text-align: center!important;
 width: 6%!important;
}

table.tbl th.tdur {
 width: 10%!important;
}

table.tbl th.tartist,
table.tbl th.ttitle,
table.tbl td.trackartist,
table.tbl td.trackname {
 width: 44%!important;
}

table.tbl td {
 line-height: 1.9em;
 vertical-align: middle;
}

table.tbl td div {
 line-height: normal;
}

.trackposition input,
.trackdur input {
 width: 100%;
}

.trackdur input {
 text-align: center;
}

.trackname textarea,
.trackartist textarea {
 overflow: hidden;
 margin: 0;
 padding: 0;
 white-space: pre;
}

.trackname textarea {
 width: 97%;
}

.trackartist textarea {
 width: 90%;
}

th.trackdur span {
 padding-right: 1.1em;
}

.trackdur span {
 padding-right: 1.5em;
}

.trackdur,
.trackname,
.trackposition {
 padding-top: 0.4em!important;
 vertical-align: top;
}

th.medium.trackdur {
 vertical-align: middle;
}

.medium.trackdur span {
 display: block;
 text-align: right;
}

.trackdur {
 text-align: right;
}

.trackposition {
 padding-left: 0.9em!important;
}

/* The :not and :first-child selectors won't work in IE, but that's ok. In IE, the medium info line will also
get this css applied, while in other browsers, that line will be skipped (and things will look a little nicer). */
table.tbl tbody tr:not(:first-child),
table.tbl tfoot tr:not(:first-child) {
 height: 1.9em;
 line-height: 1.9em;
}

table.tbl td.trackname,
table.tbl tr.ev td.trackname,
table.tbl td.trackartist,
table.tbl tr.ev td.trackartist,
table.tbl td.trackdur,
table.tbl tr.ev td.trackdur {
 padding: 0!important;
}

/* Artist editor / selector */

.editArtist,
.editArtist textarea {
 display: inline!important;
}

.editArtist {
 float: left;
 min-height: 1.9em;
 width: 93%;
}

.editArtist input,
.editArtist textarea {
 width: 100%;
 background: transparent;
 color: #000;
 border: 0;
 font-size: 100%;
}

.editArtist input[type="text"],
.editArtist textarea {
 background: #ffb!important; /* Background highlighting for unresolved artists. */
}

.addArtist {
 height: 16px;
 width: 16px;
 float: right;
 margin-top: 3px;
}

#ArtistDoneButton,
#NewArtistButton {
 bottom: 8px;
 padding: 0 1em;
 margin: 1em 0 0.2em 0;
}

#NewArtistButton {
 position: absolute;
 right: 8px;
}

#ArtistDoneButton {
 left: 8px;
 margin-left: 1.5em;
}

#artistEditBox .artistLine {
 clear: both;
 padding-bottom: 3px;
 width: 100%;
}

#artistEditBox .labelLine {
 padding-left: 15px;
 width: 100%;
}

#labelArtist,
#labelCredit,
#labelJoiner,
#artistEditBox .artistName,
#artistEditBox .artistCredit,
#artistEditBox .artistResolvedName,
#artistEditBox .joinPhrase {
 padding: 2px;
 font-size: 100%;
}

#artistEditBox .artistName,
#artistEditBox .artistCredit,
#artistEditBox .joinPhrase {
 border-style: ridge;
}

#labelArtist,
#labelJoiner,
#artistEditBox .artistName {
 display: inline;
}

#labelArtist,
#labelCredit,
#labelJoiner {
 float: left;
 font-weight: bold;
 margin-left: 0.8em;
}

/* Remove artist */

.removeArtist {
 float: left;
 display: inline;
}

/* Remove artist credit */

.removeArtist,
.removeAC {
 padding-right: 3px;
 margin-top: 4px;
 cursor: pointer;
 height: 16px;
 width: 16px;
}

.removeAC {
 display: inline-block;
}

/* #artistEditBox .artistResolvedName should *not* be here; it picks this up already when it checks .outerWidth(). */
.removeArtist,
#artistEditBox .artistName,
#artistEditBox .artistCredit,
#artistEditBox .joinPhrase {
 margin-right: 0.5em;
}

#labelCredit {
 padding-left: 10px;
}

#labelCredit,
#labelArtist,
#artistEditBox .artistResolvedName,
#artistEditBox .artistName,
#artistEditBox .artistCredit {
 width: 19em;
}

#artistEditBox .artistResolvedName {
 visability: hidden;
}
/* ... */

